<resources>
    <string-array name="selectRolePost">
        <item>All friends</item>
        <item>Only me</item>
        <item>Only people in the group</item>
    </string-array>
    <string name="app_name">Hippo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_by">by</string>
    <string name="txt_mhungo">MHUNGO</string>
    <string name="txt_checkinternet">Internet not available, Cross check your internet connectivity</string>
    <string name="txt_title_register">REGISTER</string>
    <string name="txt_username">username</string>
    <string name="txt_text_helper_username">Text and number not special character</string>
    <string name="txt_fullname">fullname</string>
    <string name="txt_email">email</string>
    <string name="txt__text_helper_email">ex: user1@gmail.com,...</string>
    <string name="txt_password">password</string>
    <string name="txt_text_helper_password">Must have at least 8 characters including 1 uppercase letter, 1 other special character, number \nex: Abc12345@</string>
    <string name="txt_enter_pass">Re-enter password</string>
    <string name="txt_btn_create">CREATE</string>
    <string name="txt_dacotaikhoan">Already have an account</string>
    <string name="txt_title_login">LOGIN</string>
    <string name="txt_btn_login">LOGIN</string>
    <string name="txt_login_chuacotaikhoan">Don\'t have an account? Sign up</string>
    <string name="txt_quenmatkhau">Fogot Password</string>
    <string name="txt_fogotpassword">Fogot Password</string>
    <string name="txt_btn_send">SEND</string>
    <string name="txt_error_email_pass">Email or password not correct</string>
    <string name="txt_click_back_to_exit">Please click BACK again to exit</string>
    <string name="txt_report">Report clicked!</string>
    <string name="txt_message_newmessage">New mesages</string>
    <string name="txt_You">You: </string>
    <string name="txt_NhanDuocAnh">You get pictures</string>
    <string name="txt_creategroup">Create Group</string>
    <string name="txt_camera_storage_required"><![CDATA[Camera & Storage permission are required]]></string>
    <string name="txt_storage_permission_requierd">Storage permission are required</string>
    <string name="txt_createBy">Create by</string>
    <string name="btn_login_text_login">LOGIN</string>
    <string name="btn_login_text_register">REGISTER</string>
    <string name="txt_email_require">email is require</string>
    <string name="txt_pass_require">password is require</string>
    <string name="txt_username_exist">username exist</string>
    <string name="txt_error">Error</string>
    <string name="txt_please_check_email">Please check email verify</string>
    <string name="txt_create_susccess">Created Successfull</string>
    <string name="txt_email_sent_pleasse_check_email">Email sent, please check mail</string>
    <string name="txt_please_cerate_again">Unable to register account or email, password already exists, try again later</string>
    <string name="txt_pass_is_same">Password is not the same</string>
    <string name="txt_create_account">Create an account</string>
    <string name="txt_please_wait">Please wait ...</string>
    <string name="txt_please_back_again">Please click BACK again to exit</string>
    <string name="post_you_may_know">Post you may know</string>
    <string name="view_more">View more</string>
    <string name="action">Action</string>
    <string name="friend_request">Friend request</string>
    <string name="view_more_posts">View more posts</string>
    <string name="invite_join_to_group">Invite join to group</string>
    <string name="posts_you_may_know">Posts you may know</string>
    <string name="someone_you_may_know">Someone you may know</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="add_friend">Add Friend</string>
    <string name="comfirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="friend">Friend</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="posts">Posts</string>
    <string name="photos">Photos</string>
    <string name="about">About</string>
    <string name="basic_introduction">Basic introduction</string>
    <string name="follower">Follower</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="Are_you_sure_want_unfollow">Are you sure want unfollow</string>
    <string name="as_your_friend"> as your friend ?</string>
    <string name="are_you_remove">Are you sure want remove </string>
    <string name="click_unfollow">Clicked unfollow</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="not_update">Not update</string>
    <string name="send_friend_request">Send a friend request</string>
    <string name="start_following_you">Started following you</string>
    <string name="you_are_block">You\'re blocked by that user !</string>
    <string name="view">View </string>
    <string name="more_reply"> more reply </string>
    <string name="do_you_want_delete">Do you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="you_are_not_member_group">You are not a member of this group</string>
    <string name="group_not_exist">Group is not exists</string>
    <string name="you_like_post">You liked this posts</string>
    <string name="post_delete">Posts deleted</string>
    <string name="approval_post">Approved posts</string>
    <string name="favorite">Favorite</string>
    <string name="error_sent_notification">Error sent notification</string>
    <string name="post_delete_fail">Delete is failed</string>
    <string name="comments"> Comments</string>
    <string name="like">like</string>
    <string name="edit_post">Edit Post</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="not_sp_save">Not support save !!!</string>
    <string name="like_your_post">Like your post</string>
    <string name="choose_option">Choose option</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="remove_user">Remove User</string>
    <string name="make_admin">Make Admin</string>
    <string name="creator_of_group">Creator of group</string>
    <string name="add_participant">Add Participant</string>
    <string name="add_user_in_this_group">Add this user in this group?</string>
    <string name="add">ADD</string>
    <string name="cancels">CANCEL</string>
    <string name="user_is_now_admin">The user is now admin...</string>
    <string name="user_is_nolonger_admin">The user is no longer admin...</string>
    <string name="add_susccessfull">Added successfully...</string>
    <string name="you_like_comments">You like this comments</string>
    <string name="do_you_want_delete_comment">Do you want to delete this comments?</string>
    <string name="has_like_your_post">has like your posts</string>
    <string name="must_friend_comments">You must is friend to view comment and comment !</string>
    <string name="image_share_not_sp">Image sharing is not supported yet</string>
    <string name="are_you_delete_posts">Are you sure want delete posts ?</string>
    <string name="report">Report clicked!</string>
    <string name="sent_reuqest_join_group">sent a request to join the group</string>
    <string name="view_story">View story</string>
    <string name="add_story">Add story</string>
    <string name="my_story">My story</string>
    <string name="sent_reqest_add_friend">send request add friend</string>
    <string name="unblock_susccesfull">UnBlocked successfully</string>
    <string name="unblock_fail">UnBlocked failed !!</string>
    <string name="you_block_not_sent_message">You\'re blocked that user, can send messages</string>
    <string name="no_img_selected">No Image selected!</string>
    <string name="something_wrong">Something gone wrong!</string>
    <string name="choose_hobby">Choose Hobby</string>
    <string name="you_are_block_you_cannot_comment">You\'re blocked by that user!, can\'t send comment !</string>
    <string name="you_cannot_comment">You can\'t send comment</string>
    <string name="has_commented_your_post">has commented your posts</string>
    <string name="commented">Commented !</string>
    <string name="commet_title">commented: </string>
    <string name="new_comment">New comments</string>
    <string name="Comments_Titile">Comments</string>
    <string name="sucessfull_update">Successfully updated!</string>
    <string name="update_fail">"Update failed"</string>
    <string name="fail">Failed</string>
    <string name="invalid_email">Invalid email</string>
    <string name="sent_email">Sending email...</string>
    <string name="email_sent">Email sent</string>
    <string name="no_one">No one</string>
    <string name="please_input_message">Please input message</string>
    <string name="camera">Camera</string>
    <string name="gallary">Gallery</string>
    <string name="pick_img">Pick Image</string>
    <string name="camera_is_required">Camera or Storage permission are required</string>
    <string name="replies">Replies</string>
    <string name="create_group">Creating group</string>
    <string name="please_enter_title">Please enter group title...</string>
    <string name="group_created">Group created</string>
    <string name="group_title">Group Title</string>
    <string name="group_decription">Group Decription</string>
    <string name="update_group">Updating Group...</string>
    <string name="group_title_is_require">Group Title is required</string>
    <string name="group_info_updated">Group info updated...</string>
    <string name="edit_group">Edit Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="participant">Participants (</string>
    <string name="on"> on</string>
    <string name="deleteGroup">Delete Group</string>
    <string name="are_you_sure_delete_group">Are you sure you want to delete group ?</string>
    <string name="are_you_sure_leave_group">Are you sure you want to leave group ?</string>
    <string name="leave">LEAVE</string>
    <string name="group_lefft_successfull">Group left successfully</string>
    <string name="group_delete_successfull">Group successfully delete</string>
    <string name="join_group">Join Group</string>
    <string name="members">members</string>
    <string name="you_want_haven_out_group">You want heaven out of this</string>
    <string name="you_have_left_the_group">You have left the group</string>
    <string name="Group_post">Group Posts</string>
    <string name="please_enter_all_infomation">Please enter all the information</string>
    <string name="post">POST</string>
    <string name="pick_image">Pick Image</string>
    <string name="previous">Previous</string>
    <string name="clear">Clear</string>
    <string name="next">Next</string>
    <string name="description">Description</string>
    <string name="all_friend">All friends</string>
    <string name="please_pick_img_write_decrip">Please pick image or write decription</string>
    <string name="upload_img">Upload image</string>
    <string name="please_wait_minute_dont_exit_app">Please wait a minutes, don\'t exit app</string>
    <string name="choose_group">Chose group</string>
    <string name="participant_group_seen_post">Participant of group will be seen post</string>
    <string name="post_susccessfull">Post successfull</string>
    <string name="settings">Settings</string>
    <string name="friends_list">Friends List</string>
    <string name="posts_is_saved">Posts is saved</string>
    <string name="see_lists_of_blocked_user">See lists of blocked user</string>
    <string name="log_out">Log Out</string>
    <string name="following">Following</string>
    <string name="stories_posted">Stories posted</string>
    <string name="btn_continue">Continue</string>
    <string name="recall">Recall</string>
</resources>